Agrega experiencia laboral

--- a/index.html
+++ b/index.html
@@ -45,13 +45,27 @@
             <h3>Perfil</h3>
             <p> Desarrollador de software con experiencia en metodologías ágiles,  
                 liderazgo y motivación de equipos de trabajo.
-                Conocimientos en diversos lenguajes como C, Java, Ruby y Javascript.
+                Conocimientos en diversos lenguajes como C, Python, Javascript y librerías como React y Vue.
             </p>
         </div>
         <div>
             <h3>Experiencia laboral</h3>
-            <p> 
-            </p>
+            <div>
+                <h4>Accenture Argentina</h4>
+                <p>2020-Actualidad</p>
+                <ul>
+                    <li>Desarrollo y mantenimiento de sitios web con React</li>
+                    <li>Mentoría de desarrolladores junior ingresando al proyecto</li>
+                </ul>
+            </div>
+            <div>
+                <h4>Soluciones Tecnologicas S.A.</h4>
+                <p>2016-2020</p>
+                <ul>
+                    <li>Configuración y mantenimiento de redes</li>
+                    <li>Soporte técnico y mesa de ayuda</li>
+                </ul>
+            </div>
         </div>
     </section>
     </main>
