Aplica clases e ids y crea estilo.css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilo.css">
     <title>CV proyecto integrador</title>
 </head>
 <body>
@@ -40,18 +41,18 @@
             <p>2015-2016: Armado y reparación de pc</p>
         </div>
     </aside>
-    <section>
-        <div>
-            <h3>Perfil</h3>
+    <section id="datos-principal">
+        <div class="principal" id="perfil">
+            <h3 id="titulo-perfil">Perfil</h3>
             <p> Desarrollador de software con experiencia en metodologías ágiles,  
                 liderazgo y motivación de equipos de trabajo.
                 Conocimientos en diversos lenguajes como C, Python, Javascript y librerías como React y Vue.
             </p>
         </div>
-        <div>
-            <h3>Experiencia laboral</h3>
+        <div class="principal" id="experiencia">
+            <h3 id="titulo-experiencia">Experiencia laboral</h3>
             <div>
-                <h4>Accenture Argentina</h4>
+                <h4 class="subtitulo-experiencia">Accenture Argentina</h4>
                 <p>2020-Actualidad</p>
                 <ul>
                     <li>Desarrollo y mantenimiento de sitios web con React</li>
@@ -59,7 +60,7 @@
                 </ul>
             </div>
             <div>
-                <h4>Soluciones Tecnologicas S.A.</h4>
+                <h4 class="subtitulo-experiencia">Soluciones Tecnologicas S.A.</h4>
                 <p>2016-2020</p>
                 <ul>
                     <li>Configuración y mantenimiento de redes</li>
